force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/MPM4_BASE__Milestone1_Log__c.object-meta.xml
<CustomObject>
    <description>Milestones PM+ - Log issues that you want to resolve on the project.</description>
    <label>Issue</label>
    <nameField>
        <displayFormat>ISS-{00000}</displayFormat>
        <label>Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>