force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Actual_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Actual_Resolution_Date__c</fullName>
    <inlineHelpText>When did the issue get resolved/closed-out?</inlineHelpText>
    <label>Actual Resolution Date</label>
    <type>Date</type>
</CustomField>