force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user who is working to resolve the issue.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>