force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Planned_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Planned_Resolution_Date__c</fullName>
    <inlineHelpText>When is it required to resolve the issue?</inlineHelpText>
    <label>Planned Resolution Date</label>
    <type>Date</type>
</CustomField>