force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Project_Expense__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A project expense we want to log some information about.</inlineHelpText>
    <label>Project Expense</label>
    <referenceTo>MPM4_BASE__Milestone1_Expense__c</referenceTo>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>