force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Project_Milestone__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Milestone</label>
    <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>