force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>