force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Project_Time__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A time entry we want to log some information about.</inlineHelpText>
    <label>Project Time</label>
    <referenceTo>MPM4_BASE__Milestone1_Time__c</referenceTo>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>