force-app/main/default/objects/MPM4_BASE__Milestone1_Log__c/fields/MPM4_BASE__Subject__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Subject__c</fullName>
    <inlineHelpText>A name for your issue.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>